# flakkari

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Doxyfile.cfg  LICENSE  README.md  SECURITY.md  VERSION  annotated.html  annotated_dup.js  classes.html  config.h.in  dir_000002_000011.html  dir_000002_000012.html  dir_000003_000008.html  dir_000003_000009.html  dir_000003_000011.html  dir_000003_000012.html  dir_000004_000005.html  dir_000004_000006.html  dir_000004_000007.html  dir_000004_000008.html  dir_000004_000009.html  dir_000005_000008.html  dir_000005_000009.html  dir_000006_000009.html  dir_000007_000004.html  dir_000007_000011.html  dir_000008_000004.html  dir_000008_000012.html  dir_000010_000009.html  dir_000011_000002.html  dir_000011_000003.html  dir_000011_000007.html  dir_000011_000010.html  (+202 more)
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md  dependabot.yml
.github/ISSUE_TEMPLATE/: game_request.yml
.github/workflows/: auto_merge_depandabot.yml  build_checker.yml  build_checker_macos.yml  build_checker_ubuntu.yml  build_checker_windows.yml  commit_norm_check.yml  cpp_norm_checker.yml  create-release.yml  create_minor.yml  create_patch.yml  create_release.yml  deploy_doxygen_page.yml  increment_major.yml  increment_minor.yml  increment_patch.yml  issue-translator.yml  linter.yml  update_logo.yml
Docs/: RFC.txt
Docs/examples/: UDPClient.hpp
Flakkari/: CMakeLists.txt  FlakkariLogger.hpp  ParseArgument.cpp  ParseArgument.hpp  config.h.in  core.cpp
Flakkari/Engine/EntityComponentSystem/: Entity.hpp  EntityFactory.hpp  Factory.cpp  Factory.hpp  Registry.cpp  Registry.hpp  SparseArrays.hpp
Flakkari/Engine/EntityComponentSystem/Components/: Components2D.hpp  Components3D.hpp  ComponentsCommon.hpp
Flakkari/Engine/EntityComponentSystem/Components/2D/: Collider.hpp  Control.hpp  Movable.hpp  RigidBody.hpp  Transform.hpp
Flakkari/Engine/EntityComponentSystem/Components/3D/: BoxCollider.hpp  Control.hpp  Movable.hpp  RigidBody.hpp  SphereCollider.hpp  Transform.hpp
Flakkari/Engine/EntityComponentSystem/Components/Common/: Child.hpp  Evolve.hpp  Health.hpp  Id.hpp  Level.hpp  NetworkEvent.hpp  NetworkIp.hpp  Parent.hpp  Spawned.hpp  Tag.hpp  Template.hpp  Timer.hpp  Weapon.hpp
Flakkari/Engine/EntityComponentSystem/Systems/: Systems.cpp  Systems.hpp
Flakkari/Engine/Math/: Vector.cpp  Vector.hpp
Flakkari/Logger/: Logger.cpp  Logger.hpp
Flakkari/Network/: Address.cpp  Address.hpp  Buffer.cpp  Buffer.hpp  IOMultiplexer.cpp  IOMultiplexer.hpp  Network.cpp  Network.hpp  Packed.hpp  PacketQueue.hpp  Serializer.hpp  Socket.cpp  Socket.hpp  packed.hpp
Flakkari/Protocol/: Commands.hpp  Components.hpp  Event.hpp  Events.hpp  Header.cpp  Header.hpp  Packet.cpp  Packet.hpp  PacketFactory.hpp
Flakkari/Server/: UDPServer.cpp  UDPServer.hpp
Flakkari/Server/Client/: Client.cpp  Client.hpp  ClientManager.cpp  ClientManager.hpp
Flakkari/Server/Game/: Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  ResourceManager.cpp  ResourceManager.hpp
Flakkari/Server/Internals/: CommandManager.cpp  CommandManager.hpp  GameDownloader.cpp  GameDownloader.hpp
Flakkari/examples/: UDPServer.hpp
Games/: SpaceWar.1.0.0.json
Games/SpaceWar/: config.cfg
Libraries/Flakkari4Unity/: README.md  package.json
Scripts/: cpp_norm_checker.py  increment_version.py  test_regex_norm_checker.py
d0/d1e/: classFlakkari_1_1ResourceManager.html  classFlakkari_1_1ResourceManager.js
d0/d29/: Tag_8hpp__dep__incl.dot  classFlakkari_1_1Protocol_1_1V__0_1_1Components.html
d0/d2b/: NetworkEvent_8hpp__dep__incl.dot
d0/d2e/: 2D_2Movable_8hpp__incl.dot
d0/d30/: md_README.html
d0/d35/: GameManager_8hpp__dep__incl.dot
d0/d43/: Components2D_8hpp.html  Components2D_8hpp_source.html
d0/d49/: Entity_8hpp__dep__incl.dot
d0/d4b/: PSELECT_01example-example.html
d0/d4e/: Events_8hpp.html  Events_8hpp.js  Events_8hpp_source.html
d0/d5a/: Tag_8hpp.html  Tag_8hpp_source.html
d0/d8e/: Socket_8hpp__dep__incl.dot
d0/d98/: md_CONTRIBUTORS.html
d0/da2/: md__github_SUPPORT.html
d0/daf/: Socket_8cpp__incl.dot
d0/db7/: Buffer_8cpp__incl.dot
d0/dba/: PacketFactory_8hpp__incl.dot
d0/dbe/: Id_8hpp.html  Id_8hpp_source.html
d0/dc4/: Game_8cpp.html
d0/dc9/: structFlakkari_1_1Protocol_1_1V__0_1_1Packet__coll__graph.dot
d0/dcf/: Components2D_8hpp__incl.dot
docs/: GameConfiguration.md  RFC.txt  annotated.html  annotated_dup.js  classes.html  diagram.drawio  dir_000003_000008.html  dir_000004_000005.html  dir_000004_000006.html  dir_000004_000008.html  dir_000005_000008.html  dir_000007_000004.html  dir_000010_000009.html  dir_000011_000010.html  dir_000012_000002.html  dir_000012_000009.html  dir_000012_000010.html  dir_000012_000011.html  dir_000012_000015.html  dir_000013_000010.html  dir_000013_000014.html  dir_000014_000002.html  dir_000014_000009.html  dir_000014_000013.html  dir_000015_000014.html  dir_2baeb9b2ab4545faf9e2316474ff25e0.html  dir_45889462d704ec0e5c2ce024817bc167.html  dir_6b151d91432e5e3a835f5b0d29761f9f.html  dir_6b151d91432e5e3a835f5b0d29761f9f.js  dir_6b151d91432e5e3a835f5b0d29761f9f_dep.dot  dir_7252f805497af2c98d8ae536646df97b.html  dir_7252f805497af2c98d8ae536646df97b_dep.dot  dir_74e769d2151983ba157e4b397e94e5a6.html  dir_7e06220f9d8ad8af8703f9c9be194f68.html  dir_7e06220f9d8ad8af8703f9c9be194f68.js  dir_7e06220f9d8ad8af8703f9c9be194f68_dep.dot  dir_86261fce5fe115366b5bef7c76c3a9a4.html  dir_86261fce5fe115366b5bef7c76c3a9a4.js  dir_86261fce5fe115366b5bef7c76c3a9a4_dep.dot  dir_91bfd317f0d822e02c021ee39d31f634.html  (+118 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+118 more)
(+1069 files in other folders)
